--- a/Clubber/WebContent/css/main.css
+++ b/Clubber/WebContent/css/main.css
@@ -2138,8 +2138,79 @@ ul.sub-menu{
 
 #createAccount input{
 	-moz-border-radius:10px; /* Firefox */
--webkit-border-radius: 10px; /* Safari, Chrome */
--khtml-border-radius: 10px; /* KHTML */
-border-radius: 10px; /* CSS3 */
-behavior:url("border-radius.htc");
+	-webkit-border-radius: 10px; /* Safari, Chrome */
+	-khtml-border-radius: 10px; /* KHTML */
+	border-radius: 10px; /* CSS3 */
+	behavior:url("border-radius.htc");
+}
+
+#exceptions-description{
+	width:500px;
+	resize: none;
+}
+
+.note-label{
+	color:#FFFFCC;
+	float:right;
+	font-size: 13px;
+}
+
+.combobox-auction-input{
+	height: 5em;
+	overflow: auto;
+	background-color: white;
+	color:black;
+	width:200px;
+}
+
+
+.error-label-hidden{
+	margin-right: 10px;
+	color:red;
+	float:right;
+	font-size: 13px;
+	display:none;
+}
+
+.error-label-displayed{
+	margin-right: 10px;
+	color:red;
+	float:right;
+	font-size: 13px;
+}
+
+
+#exceptions-description{
+	width:500px;
+	resize: none;
+}
+
+.note-label{
+	color:#FFFFCC;
+	float:right;
+	font-size: 13px;
+}
+
+.combobox-auction-input{
+	height: 5em;
+	overflow: auto;
+	background-color: white;
+	color:black;
+	width:250px;
+}
+
+
+.error-label-hidden{
+	margin-right: 10px;
+	color:red;
+	float:right;
+	font-size: 13px;
+	display:none;
+}
+
+.error-label-displayed{
+	margin-right: 10px;
+	color:red;
+	float:right;
+	font-size: 13px;
 }
