--- a/Clubber/WebContent/css/main.css
+++ b/Clubber/WebContent/css/main.css
@@ -2223,6 +2223,9 @@ ul.sub-menu{
 /***********************
 *******Offer Review******
 ***********************/
+.offer-item-reviewed-container{
+	float:right;
+}
 .offer-item-treat-image{
 	height:16px;
 	width:16px;
@@ -2239,6 +2242,8 @@ ul.sub-menu{
 	float:right;
 }
 
+.offer-item-reviewed-title{
+}
 .outgoing-message{
 	width:50%;
 	resize: none;
