Auction Management- active/ not relevant functionality

--- a/Clubber/WebContent/css/main.css
+++ b/Clubber/WebContent/css/main.css
@@ -2263,8 +2263,12 @@ ul.sub-menu{
 }
 
 /***********************
-*******Asuction Review******
+****Auction Review******
 ***********************/
 .reviewed-auction{
 	float:right;
 }
+
+/******************************
+*******Auction management******
+*******************************/
