Offer review- display client details

--- a/Clubber/WebContent/css/main.css
+++ b/Clubber/WebContent/css/main.css
@@ -2272,3 +2272,11 @@ ul.sub-menu{
 /******************************
 *******Auction management******
 *******************************/
+
+
+
+
+
+textarea{
+	resize: none;
+}
