--- a/Clubber/WebContent/css/main.css
+++ b/Clubber/WebContent/css/main.css
@@ -2262,9 +2262,13 @@ ul.sub-menu{
 }
 
 .offer-reviewed-item-description {
-	border-left: solid white;
-	float: right;
+	padding:10px;
+	border:8px double #343434;
+	border-radius: 7px;
+	width:100%;
+	float:right;
 }
+
 .auction-item-description {
 	width:47%;
 	float: left;
