many small updates

--- a/Clubber/WebContent/css/main.css
+++ b/Clubber/WebContent/css/main.css
@@ -2291,6 +2291,11 @@ ul.sub-menu{
 .offer-title-label{
 	vertical-align: top;
 }
+
+.descriptionLbl{
+	width:100%;
+}
+
 .Auction-area-title{
 	font-size: 25px;
 	padding-right:33px;
